Remove obsolete xerces lib; fix URL/Locale deprecations