@@ -1,10 +1,6 @@
 package com.donohoedigital.config;
 
 import org.apache.logging.log4j.*;
-import org.apache.xerces.xni.XMLResourceIdentifier;
-import org.apache.xerces.xni.XNIException;
-import org.apache.xerces.xni.parser.XMLEntityResolver;
-import org.apache.xerces.xni.parser.XMLInputSource;
 import org.xml.sax.*;
 
 import java.io.*;
@@ -18,11 +14,9 @@ import java.util.*;
  * Time: 3:30:38 PM
  * To change this template use File | Settings | File Templates.
  */
-public class CachedEntityResolver implements EntityResolver, XMLEntityResolver
+public class CachedEntityResolver implements EntityResolver
 {
-    private static Logger logger = LogManager.getLogger(XMLConfigFileLoader.class);
-
-    private Map<String, URL> matches = new HashMap<String, URL>();
+    private final Map<String, URL> matches = new HashMap<>();
 
     private static CachedEntityResolver resolver = null;
 
@@ -47,7 +41,7 @@ public class CachedEntityResolver implements EntityResolver, XMLEntityResolver
             // if it starts with file:, we've already resolved it
             if (name.startsWith("file:"))
             {
-                url = new URL(name);
+                url = URI.create(name).toURL();
             }
             else if (name.startsWith("classpath:"))
             {
@@ -63,21 +57,10 @@ public class CachedEntityResolver implements EntityResolver, XMLEntityResolver
     /**
      * Resolve include statements
      */
-    public InputSource resolveEntity(String publicId, String systemId) throws SAXException, IOException
+    public InputSource resolveEntity(String publicId, String systemId) throws IOException
     {
         URL url = getMatch(systemId);
         if (url == null) return null;
         return new InputSource(url.openStream());
-    }
-
-    /**
-     * Resolve includes
-     */
-    public XMLInputSource resolveEntity(XMLResourceIdentifier xmlResourceIdentifier) throws XNIException, IOException
-    {
-        String name = xmlResourceIdentifier.getLiteralSystemId();
-        URL url = getMatch(name);
-        if (url == null) return null;
-        return new XMLInputSource(name, url.toString(), null);
     }
 }
